minions sprite; automatic entity sprite generation

--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
@@ -178,6 +178,56 @@ skins.177=177
 skins.178=178
 skins.179=179
 skins.180=180
+skins.181=181
+skins.182=182
+skins.183=183
+skins.184=184
+skins.185=185
+skins.186=186
+skins.187=187
+skins.188=188
+skins.189=189
+skins.190=190
+skins.191=191
+skins.192=192
+skins.193=193
+skins.194=194
+skins.195=195
+skins.196=196
+skins.197=197
+skins.198=198
+skins.199=199
+skins.200=200
+skins.201=201
+skins.202=202
+skins.203=203
+skins.204=204
+skins.205=205
+skins.206=206
+skins.207=207
+skins.208=208
+skins.209=209
+skins.210=210
+skins.211=211
+skins.212=212
+skins.213=213
+skins.214=214
+skins.215=215
+skins.216=216
+skins.217=217
+skins.218=218
+skins.219=219
+skins.220=220
+skins.221=221
+skins.222=222
+skins.223=223
+skins.224=224
+skins.225=225
+skins.226=226
+skins.227=227
+skins.228=228
+skins.229=229
+skins.230=230
 
 name.1=regex:\u53f2\u83b1\u59c6\u00a72|\u53f2\u83b1\u59c6\u738b
 name.2=\u5ca9\u6d46\u53f2\u83b1\u59c6
@@ -345,17 +395,67 @@ name.163=\u9ca8\u9c7c\u65cb\u98ce
 name.164=\u8718\u86db\u5973\u738b
 name.165=\u6708\u4eae\u4f20\u9001\u95e8
 name.166=\u4e03\u5f69\u6c34\u6676
-name.167=
-name.168=
-name.169=
-name.170=
-name.171=
-name.172=
-name.173=
-name.174=
-name.175=
-name.176=
-name.177=
-name.178=
-name.179=
-name.180=
+name.167=\u677e\u9f20\u4f8d\u4ece
+name.168=\u73ca\u745a\u5806
+name.169=\u51b0\u7ed3\u4f53
+name.170=\u8109\u51b2\u70ae\u5854
+name.171=\u5ca9\u523a
+name.172=\u786b\u6d77\u9057\u7235\u4e4b\u9996
+name.173=\u4e4c\u9e26\u4ec6\u4ece
+name.174=\u94a8\u94a2\u65e0\u4eba\u673a
+name.175=\u971c\u4e4b\u534e
+name.176=\u592a\u9633\u4e4b\u7075
+name.177=\u8106\u5f31\u4e4b\u661f
+name.178=\u70ec\u4e4b\u82f1
+name.179=\u566c\u661f\u8005
+name.180=\u5c0f\u8150\u5316\u53f2\u83b1\u59c6
+name.181=\u5c0f\u8840\u8165\u53f2\u83b1\u59c6
+name.182=\u771f\u83cc\u5757
+name.183=\u5fae\u578b\u514b\u82cf\u9c81\u4e4b\u773c
+name.184=\u6c38\u591c\u773c\u7403
+name.185=\u9ed1\u9e70\u6218\u6597\u673a
+name.186=\u8fdc\u53e4\u5ca9\u9ca8
+name.187=\u6d77\u8d1d
+name.188=\u6781\u5bd2\u51b0\u5757
+name.189=\u6c38\u51bb\u4e4b\u7131\u534e
+name.190=\u6df1\u6d77\u6d77\u661f
+name.191=\u786b\u706b\u641c\u5bfb\u8005
+name.192=\u7194\u706b\u53e4\u5200
+name.193=\u67b6\u5f0f\u626b\u5c04\u673a
+name.194=\u592a\u9633\u795e\u4e4b\u7075
+name.195=\u6c99\u9f99\u5377
+name.196=\u7d2b\u8776
+name.197=\u7c89\u8776
+name.198=\u8ff7\u4f60\u761f\u75ab\u4f7f\u8005
+name.199=\u761f\u75ab\u96cc\u8702
+name.200=\u5e7b\u661f\u63a2\u6d4b\u5668
+name.201=\u9f20\u5c3e\u8349\u4e4b\u7075
+name.202=\u51cb\u96f6\u67af\u82b1
+name.203=\u761f\u75ab\u6218\u673a
+name.204=\u5143\u7d20\u65a7\u5934
+name.205=\u544a\u6b7b\u4e4b\u82b1
+name.206=\u8000\u76ee\u5723\u5203
+name.207=\u86c7\u773c
+name.208=\u5b87\u5b99\u706f\u7b3c
+name.209=\u9ed1\u8272\u5929\u9f99
+name.210=\u9ed1\u8272\u5929\u9f99\u4f53\u8282
+name.211=\u767d\u8272\u5929\u9f99
+name.212=\u767d\u8272\u5929\u9f99\u4f53\u8282
+name.213=\u8840\u708e\u9aa8\u9f99
+name.214=\u8840\u708e\u9aa8\u9f99\u5b9d\u5b9d
+name.215=\u5c0f\u5e7d\u82b1
+name.216=\u5c0f\u4e4c\u8d3c
+name.217=\u5929\u72fc\u661f
+name.218=\u5c0f\u786b\u6d77\u9057\u7235
+name.219=\u5b87\u5b99\u70ae\u8247
+name.220=\u706d\u5146\u6e21\u9e26
+name.221=\u707f\u70c2\u5149\u73af
+name.222=\u78c1\u94c1\u65e0\u4eba\u673a
+name.223=\u70bd\u7130\u5929\u9f99
+name.224=\u6781\u663c\u98de\u884c\u7269
+name.225=\u6042\u6212\u63a2\u9b42\u8005
+name.226=\u6c38\u52ab\u4fe1\u6807
+name.227=\u963f\u745e\u65af\u5916\u9aa8\u9abc
+name.228=\u5f52\u865a\u4e4b\u7075
+name.229=\u6e90\u751f\u5bd2\u6676
+name.230=\u5149\u9634\u6d41\u65f6\u4f1e
