--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -9861,7 +9861,7 @@ Dodu的手炮:
 真菌块:
   item: WOOD_SWORD
   lore:
-  - §r召唤真菌块为你而战
+  - §r召唤真菌块为你而战，真菌块需要占用两个仆从栏位
   - §r真菌块击中敌人后为拥有者恢复生命值，最多存在一个真菌块
   attributes:
     damage: 40
